@@ -2,3 +2,4 @@
 .Rhistory
 .RData
 orgmassspecr.Rproj
+/OrgMassSpecR.Rcheck
